frontend/service.yml
apiVersion: v1
kind: Service
metadata:
  name: shopnow-frontend-service
  namespace: shopnow
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: shopnow-frontend
  sessionAffinity: None
  type: ClusterIP
